--- a/WebForms/Web.config
+++ b/WebForms/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebForms-20161119094118.mdf;Initial Catalog=aspnet-WebForms-20161119094118;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="WebFormDBConnectionString1" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WebFormDB.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
